login and register

--- a/frontend/src/css/login.css
+++ b/frontend/src/css/login.css
@@ -5,7 +5,7 @@ body {
 }
 
 html {
-    background-image: url('../images/food2.jpg');
+    background-image: url('../images/collegeBackground.jpg');
     background-position: center;
     background-size: cover;
     background-attachment: fixed;
